# kg-PoC

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entry.py  etl.ipynb  main.ipynb  main.py  playground.ipynb  pyproject.toml  relational_rdf.ipynb
kg_poc/: llm_engine.py  logger_config.py  project.yml
kg_poc/etl/: base.py  chembl.py  naeb.py  npass.py  rdf_converter.py
kg_poc/scripts/: convert_rdf_format.py  run_chembl_etl.py  run_naeb_etl.py  run_npass_etl.py
notebooks/: example.ipynb  main.ipynb
tests/etl/: test_naeb.py
